src/test/contracts/negative/deep_pattern_matching/pm_fail15.religo

type parameter =
  Increment((int, int, int))
| Reset(unit)

let main = (action : parameter) : int =>
  switch(action) {
  | Increment((n, m)) => 0
  | Reset             => 0
  }